many many CHANGES

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ PyQt6==6.7.0
 pandas==2.2.0
 numpy==1.24.4
 pytest==8.0.0
+
+# For database updates (optional - needed for update_databases.py)
+requests>=2.31.0
+tqdm>=4.66.0
